skylang.output
Terminais sem uso na gramática

    WHILE
    FOR
    IS_IN
    IS_SET
    OR
    CHAR
    NEGATION
    APOST
    EMPTY


Gramática

    0 $accept: programa $end

    1 programa: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: variable_declaration
    5            | func_declaration

    6 variable_declaration: TYPE ID SEMICOLON

    7 func_declaration: TYPE ID PARENTESES_INI params PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM

    8 params: params_list

    9 params_list: param COLON params_list
   10            | param
   11            | %empty

   12 param: TYPE ID

   13 codeBlock: codeBlock statement
   14          | %empty

   15 statement: variable_declaration
   16          | variable_assignment SEMICOLON
   17          | exp SEMICOLON
   18          | ifStatement
   19          | forAllStatement
   20          | outPutStatement SEMICOLON
   21          | inputStatement SEMICOLON
   22          | callFuncStatement SEMICOLON
   23          | RETURN exp SEMICOLON

   24 callFuncStatement: ID PARENTESES_INI call_params PARENTESES_FIM

   25 call_params: call_params_list

   26 call_params_list: call_param COLON call_params_list
   27                 | call_param
   28                 | %empty

   29 call_param: terminal

   30 inputStatement: READ PARENTESES_INI STRING PARENTESES_FIM

   31 outPutStatement: WRITE PARENTESES_INI STRING PARENTESES_FIM
   32                | WRITELN PARENTESES_INI STRING PARENTESES_FIM

   33 forAllStatement: FORALL PARENTESES_INI ID IN ID PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM

   34 ifStatement: IF PARENTESES_INI exp PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM
   35            | IF PARENTESES_INI exp PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM ELSE CHAVES_INI codeBlock CHAVES_FIM

   36 variable_assignment: ID EQUALS exp

   37 exp: setExp
   38    | aritExp
   39    | relExp
   40    | terminal

   41 setExp: ADD PARENTESES_INI terms_set IN terms_set PARENTESES_FIM
   42       | REMOVE PARENTESES_INI terms_set IN terms_set PARENTESES_FIM
   43       | EXISTS PARENTESES_INI terms_set IN terms_set PARENTESES_FIM

   44 terms_set: aritSetExp

   45 aritSetExp: terminal
   46           | PARENTESES_INI EXISTS PARENTESES_INI terms_set IN terms_set PARENTESES_FIM PARENTESES_FIM

   47 aritExp: terminal '*' exp
   48        | terminal '+' exp
   49        | terminal '-' exp
   50        | terminal '/' exp

   51 relExp: terminal rel exp

   52 rel: CGE
   53    | CGT
   54    | CNE
   55    | CLT
   56    | AND
   57    | CLE
   58    | CEQ

   59 terminal: ID
   60         | FLOAT
   61         | INTEGER


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '*' (42) 47
    '+' (43) 48
    '-' (45) 49
    '/' (47) 50
    error (256)
    TYPE <str> (258) 6 7 12
    ID <str> (259) 6 7 12 24 33 36 59
    RETURN (260) 23
    IF (261) 34 35
    ELSE (262) 35
    WHILE (263)
    WRITE (264) 31
    WRITELN (265) 32
    READ (266) 30
    EXISTS (267) 43 46
    ADD (268) 41
    REMOVE (269) 42
    FOR (270)
    FORALL (271) 33
    IN (272) 33 41 42 43 46
    IS_IN (273)
    IS_SET (274)
    OR (275)
    CLE <tree> (276) 57
    CLT <tree> (277) 55
    CNE <tree> (278) 54
    CGT <tree> (279) 53
    AND <tree> (280) 56
    CEQ <tree> (281) 58
    CGE <tree> (282) 52
    INTEGER <tree> (283) 61
    FLOAT <tree> (284) 60
    CHAR (285)
    STRING (286) 30 31 32
    NEGATION (287)
    APOST (288)
    CHAVES_INI (289) 7 33 34 35
    CHAVES_FIM (290) 7 33 34 35
    PARENTESES_INI (291) 7 24 30 31 32 33 34 35 41 42 43 46
    PARENTESES_FIM (292) 7 24 30 31 32 33 34 35 41 42 43 46
    EMPTY (293)
    SEMICOLON (294) 6 16 17 20 21 22 23
    EQUALS (295) 36
    COLON (296) 9 26


Não terminais com as regras onde eles aparecem

    $accept (46)
        à esquerda: 0
    programa <tree> (47)
        à esquerda: 1
        à direita: 0
    declarationList <tree> (48)
        à esquerda: 2 3
        à direita: 1 2
    declaration <tree> (49)
        à esquerda: 4 5
        à direita: 2 3
    variable_declaration <tree> (50)
        à esquerda: 6
        à direita: 4 15
    func_declaration <tree> (51)
        à esquerda: 7
        à direita: 5
    params <tree> (52)
        à esquerda: 8
        à direita: 7
    params_list <tree> (53)
        à esquerda: 9 10 11
        à direita: 8 9
    param <tree> (54)
        à esquerda: 12
        à direita: 9 10
    codeBlock <tree> (55)
        à esquerda: 13 14
        à direita: 7 13 33 34 35
    statement <tree> (56)
        à esquerda: 15 16 17 18 19 20 21 22 23
        à direita: 13
    callFuncStatement <tree> (57)
        à esquerda: 24
        à direita: 22
    call_params <tree> (58)
        à esquerda: 25
        à direita: 24
    call_params_list <tree> (59)
        à esquerda: 26 27 28
        à direita: 25 26
    call_param <tree> (60)
        à esquerda: 29
        à direita: 26 27
    inputStatement <tree> (61)
        à esquerda: 30
        à direita: 21
    outPutStatement <tree> (62)
        à esquerda: 31 32
        à direita: 20
    forAllStatement <tree> (63)
        à esquerda: 33
        à direita: 19
    ifStatement <tree> (64)
        à esquerda: 34 35
        à direita: 18
    variable_assignment <tree> (65)
        à esquerda: 36
        à direita: 16
    exp <tree> (66)
        à esquerda: 37 38 39 40
        à direita: 17 23 34 35 36 47 48 49 50 51
    setExp <tree> (67)
        à esquerda: 41 42 43
        à direita: 37
    terms_set <tree> (68)
        à esquerda: 44
        à direita: 41 42 43 46
    aritSetExp <tree> (69)
        à esquerda: 45 46
        à direita: 44
    aritExp <tree> (70)
        à esquerda: 47 48 49 50
        à direita: 38
    relExp <tree> (71)
        à esquerda: 51
        à direita: 39
    rel <tree> (72)
        à esquerda: 52 53 54 55 56 57 58
        à direita: 51
    terminal <tree> (73)
        à esquerda: 59 60 61
        à direita: 29 40 45 47 48 49 50 51


Estado 0

    0 $accept: • programa $end

    TYPE  deslocar, e ir ao estado 1

    programa              ir ao estado 2
    declarationList       ir ao estado 3
    declaration           ir ao estado 4
    variable_declaration  ir ao estado 5
    func_declaration      ir ao estado 6


Estado 1

    6 variable_declaration: TYPE • ID SEMICOLON
    7 func_declaration: TYPE • ID PARENTESES_INI params PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM

    ID  deslocar, e ir ao estado 7


Estado 2

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 8


Estado 3

    1 programa: declarationList •
    2 declarationList: declarationList • declaration

    TYPE  deslocar, e ir ao estado 1

    $end  reduzir usando a regra 1 (programa)

    declaration           ir ao estado 9
    variable_declaration  ir ao estado 5
    func_declaration      ir ao estado 6


Estado 4

    3 declarationList: declaration •

    $end  reduzir usando a regra 3 (declarationList)
    TYPE  reduzir usando a regra 3 (declarationList)


Estado 5

    4 declaration: variable_declaration •

    $end  reduzir usando a regra 4 (declaration)
    TYPE  reduzir usando a regra 4 (declaration)


Estado 6

    5 declaration: func_declaration •

    $end  reduzir usando a regra 5 (declaration)
    TYPE  reduzir usando a regra 5 (declaration)


Estado 7

    6 variable_declaration: TYPE ID • SEMICOLON
    7 func_declaration: TYPE ID • PARENTESES_INI params PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 10
    SEMICOLON       deslocar, e ir ao estado 11


Estado 8

    0 $accept: programa $end •

    $padrão  aceitar


Estado 9

    2 declarationList: declarationList declaration •

    $end  reduzir usando a regra 2 (declarationList)
    TYPE  reduzir usando a regra 2 (declarationList)


Estado 10

    7 func_declaration: TYPE ID PARENTESES_INI • params PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM

    TYPE  deslocar, e ir ao estado 12

    PARENTESES_FIM  reduzir usando a regra 11 (params_list)

    params       ir ao estado 13
    params_list  ir ao estado 14
    param        ir ao estado 15


Estado 11

    6 variable_declaration: TYPE ID SEMICOLON •

    $end  reduzir usando a regra 6 (variable_declaration)
    TYPE  reduzir usando a regra 6 (variable_declaration)


Estado 12

   12 param: TYPE • ID

    ID  deslocar, e ir ao estado 16


Estado 13

    7 func_declaration: TYPE ID PARENTESES_INI params • PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM

    PARENTESES_FIM  deslocar, e ir ao estado 17


Estado 14

    8 params: params_list •

    PARENTESES_FIM  reduzir usando a regra 8 (params)


Estado 15

    9 params_list: param • COLON params_list
   10            | param •

    COLON  deslocar, e ir ao estado 18

    PARENTESES_FIM  reduzir usando a regra 10 (params_list)


Estado 16

   12 param: TYPE ID •

    PARENTESES_FIM  reduzir usando a regra 12 (param)
    COLON           reduzir usando a regra 12 (param)


Estado 17

    7 func_declaration: TYPE ID PARENTESES_INI params PARENTESES_FIM • CHAVES_INI codeBlock CHAVES_FIM

    CHAVES_INI  deslocar, e ir ao estado 19


Estado 18

    9 params_list: param COLON • params_list

    TYPE  deslocar, e ir ao estado 12

    PARENTESES_FIM  reduzir usando a regra 11 (params_list)

    params_list  ir ao estado 20
    param        ir ao estado 15


Estado 19

    7 func_declaration: TYPE ID PARENTESES_INI params PARENTESES_FIM CHAVES_INI • codeBlock CHAVES_FIM

    TYPE        reduzir usando a regra 14 (codeBlock)
    ID          reduzir usando a regra 14 (codeBlock)
    RETURN      reduzir usando a regra 14 (codeBlock)
    IF          reduzir usando a regra 14 (codeBlock)
    WRITE       reduzir usando a regra 14 (codeBlock)
    WRITELN     reduzir usando a regra 14 (codeBlock)
    READ        reduzir usando a regra 14 (codeBlock)
    EXISTS      reduzir usando a regra 14 (codeBlock)
    ADD         reduzir usando a regra 14 (codeBlock)
    REMOVE      reduzir usando a regra 14 (codeBlock)
    FORALL      reduzir usando a regra 14 (codeBlock)
    INTEGER     reduzir usando a regra 14 (codeBlock)
    FLOAT       reduzir usando a regra 14 (codeBlock)
    CHAVES_FIM  reduzir usando a regra 14 (codeBlock)

    codeBlock  ir ao estado 21


Estado 20

    9 params_list: param COLON params_list •

    PARENTESES_FIM  reduzir usando a regra 9 (params_list)


Estado 21

    7 func_declaration: TYPE ID PARENTESES_INI params PARENTESES_FIM CHAVES_INI codeBlock • CHAVES_FIM
   13 codeBlock: codeBlock • statement

    TYPE        deslocar, e ir ao estado 22
    ID          deslocar, e ir ao estado 23
    RETURN      deslocar, e ir ao estado 24
    IF          deslocar, e ir ao estado 25
    WRITE       deslocar, e ir ao estado 26
    WRITELN     deslocar, e ir ao estado 27
    READ        deslocar, e ir ao estado 28
    EXISTS      deslocar, e ir ao estado 29
    ADD         deslocar, e ir ao estado 30
    REMOVE      deslocar, e ir ao estado 31
    FORALL      deslocar, e ir ao estado 32
    INTEGER     deslocar, e ir ao estado 33
    FLOAT       deslocar, e ir ao estado 34
    CHAVES_FIM  deslocar, e ir ao estado 35

    variable_declaration  ir ao estado 36
    statement             ir ao estado 37
    callFuncStatement     ir ao estado 38
    inputStatement        ir ao estado 39
    outPutStatement       ir ao estado 40
    forAllStatement       ir ao estado 41
    ifStatement           ir ao estado 42
    variable_assignment   ir ao estado 43
    exp                   ir ao estado 44
    setExp                ir ao estado 45
    aritExp               ir ao estado 46
    relExp                ir ao estado 47
    terminal              ir ao estado 48


Estado 22

    6 variable_declaration: TYPE • ID SEMICOLON

    ID  deslocar, e ir ao estado 49


Estado 23

   24 callFuncStatement: ID • PARENTESES_INI call_params PARENTESES_FIM
   36 variable_assignment: ID • EQUALS exp
   59 terminal: ID •

    PARENTESES_INI  deslocar, e ir ao estado 50
    EQUALS          deslocar, e ir ao estado 51

    CLE        reduzir usando a regra 59 (terminal)
    CLT        reduzir usando a regra 59 (terminal)
    CNE        reduzir usando a regra 59 (terminal)
    CGT        reduzir usando a regra 59 (terminal)
    AND        reduzir usando a regra 59 (terminal)
    CEQ        reduzir usando a regra 59 (terminal)
    CGE        reduzir usando a regra 59 (terminal)
    SEMICOLON  reduzir usando a regra 59 (terminal)
    '*'        reduzir usando a regra 59 (terminal)
    '+'        reduzir usando a regra 59 (terminal)
    '-'        reduzir usando a regra 59 (terminal)
    '/'        reduzir usando a regra 59 (terminal)


Estado 24

   23 statement: RETURN • exp SEMICOLON

    ID       deslocar, e ir ao estado 52
    EXISTS   deslocar, e ir ao estado 29
    ADD      deslocar, e ir ao estado 30
    REMOVE   deslocar, e ir ao estado 31
    INTEGER  deslocar, e ir ao estado 33
    FLOAT    deslocar, e ir ao estado 34

    exp       ir ao estado 53
    setExp    ir ao estado 45
    aritExp   ir ao estado 46
    relExp    ir ao estado 47
    terminal  ir ao estado 48


Estado 25

   34 ifStatement: IF • PARENTESES_INI exp PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM
   35            | IF • PARENTESES_INI exp PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM ELSE CHAVES_INI codeBlock CHAVES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 54


Estado 26

   31 outPutStatement: WRITE • PARENTESES_INI STRING PARENTESES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 55


Estado 27

   32 outPutStatement: WRITELN • PARENTESES_INI STRING PARENTESES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 56


Estado 28

   30 inputStatement: READ • PARENTESES_INI STRING PARENTESES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 57


Estado 29

   43 setExp: EXISTS • PARENTESES_INI terms_set IN terms_set PARENTESES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 58


Estado 30

   41 setExp: ADD • PARENTESES_INI terms_set IN terms_set PARENTESES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 59


Estado 31

   42 setExp: REMOVE • PARENTESES_INI terms_set IN terms_set PARENTESES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 60


Estado 32

   33 forAllStatement: FORALL • PARENTESES_INI ID IN ID PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM

    PARENTESES_INI  deslocar, e ir ao estado 61


Estado 33

   61 terminal: INTEGER •

    CLE        reduzir usando a regra 61 (terminal)
    CLT        reduzir usando a regra 61 (terminal)
    CNE        reduzir usando a regra 61 (terminal)
    CGT        reduzir usando a regra 61 (terminal)
    AND        reduzir usando a regra 61 (terminal)
    CEQ        reduzir usando a regra 61 (terminal)
    CGE        reduzir usando a regra 61 (terminal)
    SEMICOLON  reduzir usando a regra 61 (terminal)
    '*'        reduzir usando a regra 61 (terminal)
    '+'        reduzir usando a regra 61 (terminal)
    '-'        reduzir usando a regra 61 (terminal)
    '/'        reduzir usando a regra 61 (terminal)


Estado 34

   60 terminal: FLOAT •

    CLE        reduzir usando a regra 60 (terminal)
    CLT        reduzir usando a regra 60 (terminal)
    CNE        reduzir usando a regra 60 (terminal)
    CGT        reduzir usando a regra 60 (terminal)
    AND        reduzir usando a regra 60 (terminal)
    CEQ        reduzir usando a regra 60 (terminal)
    CGE        reduzir usando a regra 60 (terminal)
    SEMICOLON  reduzir usando a regra 60 (terminal)
    '*'        reduzir usando a regra 60 (terminal)
    '+'        reduzir usando a regra 60 (terminal)
    '-'        reduzir usando a regra 60 (terminal)
    '/'        reduzir usando a regra 60 (terminal)


Estado 35

    7 func_declaration: TYPE ID PARENTESES_INI params PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM •

    $end  reduzir usando a regra 7 (func_declaration)
    TYPE  reduzir usando a regra 7 (func_declaration)


Estado 36

   15 statement: variable_declaration •

    TYPE        reduzir usando a regra 15 (statement)
    ID          reduzir usando a regra 15 (statement)
    RETURN      reduzir usando a regra 15 (statement)
    IF          reduzir usando a regra 15 (statement)
    WRITE       reduzir usando a regra 15 (statement)
    WRITELN     reduzir usando a regra 15 (statement)
    READ        reduzir usando a regra 15 (statement)
    EXISTS      reduzir usando a regra 15 (statement)
    ADD         reduzir usando a regra 15 (statement)
    REMOVE      reduzir usando a regra 15 (statement)
    FORALL      reduzir usando a regra 15 (statement)
    INTEGER     reduzir usando a regra 15 (statement)
    FLOAT       reduzir usando a regra 15 (statement)
    CHAVES_FIM  reduzir usando a regra 15 (statement)


Estado 37

   13 codeBlock: codeBlock statement •

    TYPE        reduzir usando a regra 13 (codeBlock)
    ID          reduzir usando a regra 13 (codeBlock)
    RETURN      reduzir usando a regra 13 (codeBlock)
    IF          reduzir usando a regra 13 (codeBlock)
    WRITE       reduzir usando a regra 13 (codeBlock)
    WRITELN     reduzir usando a regra 13 (codeBlock)
    READ        reduzir usando a regra 13 (codeBlock)
    EXISTS      reduzir usando a regra 13 (codeBlock)
    ADD         reduzir usando a regra 13 (codeBlock)
    REMOVE      reduzir usando a regra 13 (codeBlock)
    FORALL      reduzir usando a regra 13 (codeBlock)
    INTEGER     reduzir usando a regra 13 (codeBlock)
    FLOAT       reduzir usando a regra 13 (codeBlock)
    CHAVES_FIM  reduzir usando a regra 13 (codeBlock)


Estado 38

   22 statement: callFuncStatement • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 62


Estado 39

   21 statement: inputStatement • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 63


Estado 40

   20 statement: outPutStatement • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 64


Estado 41

   19 statement: forAllStatement •

    TYPE        reduzir usando a regra 19 (statement)
    ID          reduzir usando a regra 19 (statement)
    RETURN      reduzir usando a regra 19 (statement)
    IF          reduzir usando a regra 19 (statement)
    WRITE       reduzir usando a regra 19 (statement)
    WRITELN     reduzir usando a regra 19 (statement)
    READ        reduzir usando a regra 19 (statement)
    EXISTS      reduzir usando a regra 19 (statement)
    ADD         reduzir usando a regra 19 (statement)
    REMOVE      reduzir usando a regra 19 (statement)
    FORALL      reduzir usando a regra 19 (statement)
    INTEGER     reduzir usando a regra 19 (statement)
    FLOAT       reduzir usando a regra 19 (statement)
    CHAVES_FIM  reduzir usando a regra 19 (statement)


Estado 42

   18 statement: ifStatement •

    TYPE        reduzir usando a regra 18 (statement)
    ID          reduzir usando a regra 18 (statement)
    RETURN      reduzir usando a regra 18 (statement)
    IF          reduzir usando a regra 18 (statement)
    WRITE       reduzir usando a regra 18 (statement)
    WRITELN     reduzir usando a regra 18 (statement)
    READ        reduzir usando a regra 18 (statement)
    EXISTS      reduzir usando a regra 18 (statement)
    ADD         reduzir usando a regra 18 (statement)
    REMOVE      reduzir usando a regra 18 (statement)
    FORALL      reduzir usando a regra 18 (statement)
    INTEGER     reduzir usando a regra 18 (statement)
    FLOAT       reduzir usando a regra 18 (statement)
    CHAVES_FIM  reduzir usando a regra 18 (statement)


Estado 43

   16 statement: variable_assignment • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 65


Estado 44

   17 statement: exp • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 66


Estado 45

   37 exp: setExp •

    SEMICOLON  reduzir usando a regra 37 (exp)


Estado 46

   38 exp: aritExp •

    SEMICOLON  reduzir usando a regra 38 (exp)


Estado 47

   39 exp: relExp •

    SEMICOLON  reduzir usando a regra 39 (exp)


Estado 48

   40 exp: terminal •
   47 aritExp: terminal • '*' exp
   48        | terminal • '+' exp
   49        | terminal • '-' exp
   50        | terminal • '/' exp
   51 relExp: terminal • rel exp

    CLE  deslocar, e ir ao estado 67
    CLT  deslocar, e ir ao estado 68
    CNE  deslocar, e ir ao estado 69
    CGT  deslocar, e ir ao estado 70
    AND  deslocar, e ir ao estado 71
    CEQ  deslocar, e ir ao estado 72
    CGE  deslocar, e ir ao estado 73
    '*'  deslocar, e ir ao estado 74
    '+'  deslocar, e ir ao estado 75
    '-'  deslocar, e ir ao estado 76
    '/'  deslocar, e ir ao estado 77

    SEMICOLON  reduzir usando a regra 40 (exp)

    rel  ir ao estado 78


Estado 49

    6 variable_declaration: TYPE ID • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 137


Estado 50

   24 callFuncStatement: ID PARENTESES_INI • call_params PARENTESES_FIM

    ID       deslocar, e ir ao estado 138
    INTEGER  deslocar, e ir ao estado 139
    FLOAT    deslocar, e ir ao estado 140

    PARENTESES_FIM  reduzir usando a regra 28 (call_params_list)

    call_params       ir ao estado 79
    call_params_list  ir ao estado 80
    call_param        ir ao estado 81
    terminal          ir ao estado 82


Estado 51

   36 variable_assignment: ID EQUALS • exp

    ID       deslocar, e ir ao estado 52
    EXISTS   deslocar, e ir ao estado 29
    ADD      deslocar, e ir ao estado 30
    REMOVE   deslocar, e ir ao estado 31
    INTEGER  deslocar, e ir ao estado 33
    FLOAT    deslocar, e ir ao estado 34

    exp       ir ao estado 83
    setExp    ir ao estado 45
    aritExp   ir ao estado 46
    relExp    ir ao estado 47
    terminal  ir ao estado 48


Estado 52

   59 terminal: ID •

    CLE        reduzir usando a regra 59 (terminal)
    CLT        reduzir usando a regra 59 (terminal)
    CNE        reduzir usando a regra 59 (terminal)
    CGT        reduzir usando a regra 59 (terminal)
    AND        reduzir usando a regra 59 (terminal)
    CEQ        reduzir usando a regra 59 (terminal)
    CGE        reduzir usando a regra 59 (terminal)
    SEMICOLON  reduzir usando a regra 59 (terminal)
    '*'        reduzir usando a regra 59 (terminal)
    '+'        reduzir usando a regra 59 (terminal)
    '-'        reduzir usando a regra 59 (terminal)
    '/'        reduzir usando a regra 59 (terminal)


Estado 53

   23 statement: RETURN exp • SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 84


Estado 54

   34 ifStatement: IF PARENTESES_INI • exp PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM
   35            | IF PARENTESES_INI • exp PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM ELSE CHAVES_INI codeBlock CHAVES_FIM

    ID       deslocar, e ir ao estado 141
    EXISTS   deslocar, e ir ao estado 142
    ADD      deslocar, e ir ao estado 143
    REMOVE   deslocar, e ir ao estado 144
    INTEGER  deslocar, e ir ao estado 145
    FLOAT    deslocar, e ir ao estado 146

    exp       ir ao estado 85
    setExp    ir ao estado 147
    aritExp   ir ao estado 148
    relExp    ir ao estado 149
    terminal  ir ao estado 150


Estado 55

   31 outPutStatement: WRITE PARENTESES_INI • STRING PARENTESES_FIM

    STRING  deslocar, e ir ao estado 86


Estado 56

   32 outPutStatement: WRITELN PARENTESES_INI • STRING PARENTESES_FIM

    STRING  deslocar, e ir ao estado 87


Estado 57

   30 inputStatement: READ PARENTESES_INI • STRING PARENTESES_FIM

    STRING  deslocar, e ir ao estado 88


Estado 58

   43 setExp: EXISTS PARENTESES_INI • terms_set IN terms_set PARENTESES_FIM

    ID              deslocar, e ir ao estado 151
    INTEGER         deslocar, e ir ao estado 152
    FLOAT           deslocar, e ir ao estado 153
    PARENTESES_INI  deslocar, e ir ao estado 89

    terms_set   ir ao estado 90
    aritSetExp  ir ao estado 91
    terminal    ir ao estado 92


Estado 59

   41 setExp: ADD PARENTESES_INI • terms_set IN terms_set PARENTESES_FIM

    ID              deslocar, e ir ao estado 151
    INTEGER         deslocar, e ir ao estado 152
    FLOAT           deslocar, e ir ao estado 153
    PARENTESES_INI  deslocar, e ir ao estado 89

    terms_set   ir ao estado 93
    aritSetExp  ir ao estado 91
    terminal    ir ao estado 92


Estado 60

   42 setExp: REMOVE PARENTESES_INI • terms_set IN terms_set PARENTESES_FIM

    ID              deslocar, e ir ao estado 151
    INTEGER         deslocar, e ir ao estado 152
    FLOAT           deslocar, e ir ao estado 153
    PARENTESES_INI  deslocar, e ir ao estado 89

    terms_set   ir ao estado 94
    aritSetExp  ir ao estado 91
    terminal    ir ao estado 92


Estado 61

   33 forAllStatement: FORALL PARENTESES_INI • ID IN ID PARENTESES_FIM CHAVES_INI codeBlock CHAVES_FIM

    ID  deslocar, e ir ao estado 95


Estado 62

   22 statement: callFuncStatement SEMICOLON •

    TYPE        reduzir usando a regra 22 (statement)
    ID          reduzir usando a regra 22 (statement)
    RETURN      reduzir usando a regra 22 (statement)
    IF          reduzir usando a regra 22 (statement)
    WRITE       reduzir usando a regra 22 (statement)
    WRITELN     reduzir usando a regra 22 (statement)
    READ        reduzir usando a regra 22 (statement)
    EXISTS      reduzir usando a regra 22 (statement)
    ADD         reduzir usando a regra 22 (statement)
    REMOVE      reduzir usando a regra 22 (statement)
    FORALL      reduzir usando a regra 22 (statement)
    INTEGER     reduzir usando a regra 22 (statement)
    FLOAT       reduzir usando a regra 22 (statement)
    CHAVES_FIM  reduzir usando a regra 22 (statement)


Estado 63

   21 statement: inputStatement SEMICOLON •
